--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,8 @@
-﻿<html lang="pt-br" style="--vh: 8.01px;" class="">
+﻿<html lang="pt-br" style="--vh: 5.1000000000000005px;" class="">
 
 <head>
+  <script type="text/javascript" id="mobile-simulator">
+    window.hasMobileFirstExtension = true;</script>
   <script type="text/javascript" id="mobile-simulator">
     window.hasMobileFirstExtension = true;</script>
   <!-- Required meta tags-->
@@ -69,7 +71,7 @@
         <div class="col-12 col-lg-8 home-content text-center">
           <h1 class="home-name">Isabelle Gai <span>Nutricionista</span></h1>
           <h4 class="cd-headline clip home-headline">Mudando <span class="cd-words-wrapper single-headline"
-              style="width: 111.355px; overflow: hidden;"><b class="is-hidden">seu corpo</b><b class="is-visible">sua
+              style="width: 112.402px; overflow: hidden;"><b class="is-visible">seu corpo</b><b class="is-hidden">sua
                 mente</b><b class="is-hidden">sua vida</b></span></h4>
           <!-- botão de agendamento -->
           <div class="button-agendamento">
@@ -113,7 +115,8 @@
       </div>
       <div class="simplebar-mask">
         <div class="simplebar-offset" style="right: -21.25px; bottom: 0px;">
-          <div class="simplebar-content-wrapper" style="height: 100%; overflow: hidden scroll;">
+          <div class="simplebar-content-wrapper"
+            style="height: 100%; overflow: hidden scroll; padding-right: 20px; padding-bottom: 0px;">
             <div class="simplebar-content" style="padding: 0px;">
               <div class="container">
                 <div class="lightbox-close">
@@ -224,7 +227,7 @@
       <div class="simplebar-scrollbar" style="width: 25px; transform: translate3d(0px, 0px, 0px); display: none;"></div>
     </div>
     <div class="simplebar-track simplebar-vertical" style="visibility: visible;">
-      <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: block; height: 520px;">
+      <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: block; height: 210px;">
       </div>
     </div>
   </div>
@@ -236,8 +239,9 @@
         <div class="simplebar-height-auto-observer"></div>
       </div>
       <div class="simplebar-mask">
-        <div class="simplebar-offset" style="right: 0px; bottom: 0px;">
-          <div class="simplebar-content-wrapper" style="height: 100%; overflow: hidden;">
+        <div class="simplebar-offset" style="right: -21.25px; bottom: 0px;">
+          <div class="simplebar-content-wrapper"
+            style="height: 100%; overflow: hidden scroll; padding-right: 20px; padding-bottom: 0px;">
             <div class="simplebar-content" style="padding: 0px;">
               <div class="container">
                 <div class="lightbox-close">
@@ -297,14 +301,15 @@
     <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;">
       <div class="simplebar-scrollbar" style="width: 25px; transform: translate3d(0px, 0px, 0px); display: none;"></div>
     </div>
-    <div class="simplebar-track simplebar-vertical" style="visibility: hidden;">
-      <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: none; height: 597px;">
+    <div class="simplebar-track simplebar-vertical" style="visibility: visible;">
+      <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: block; height: 361px;">
       </div>
     </div>
   </div>
   <!-- produtos lightbox-->
-  <div class="lightbox-wrapper animated portfolio-off produtos-on fadeIn" id="produtos" data-simplebar="init"
-    style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; z-index: 9999; opacity: 1; animation-duration: 0s; animation-delay: 0.5s; animation-fill-mode: none;">
+  <!-- produtos lightbox-->
+  <div class="lightbox-wrapper animated portfolio-off fadeOut" id="produtos" data-simplebar="init"
+    style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; z-index: -9999; opacity: 0; animation-duration: 0s; animation-delay: 0.5s; animation-fill-mode: none;">
     <div class="simplebar-wrapper" style="margin: 0px;">
       <div class="simplebar-height-auto-observer-wrapper">
         <div class="simplebar-height-auto-observer"></div>
@@ -340,8 +345,8 @@
                         <!-- Thumbnail list-->
                         <div class="portfolio-grid row" style="position: relative; height: 821.094px;">
                           <!-- Single item-->
-                          <div class="single-item col-6 col-lg-4 design"
-                            style="position: absolute; left: 0px; top: 0px;"><a class="portfolio-item"
+                          <div class="single-item col-6 col-lg-4 photos"
+                            style="position: absolute; left: 399.984px; top: 0px;"><a class="portfolio-item"
                               href="https://pay.hotmart.com/N85305262F?sck=HOTMART_PRODUCT_PAGE&off=hsealt6t&hotfeature=32&bid=1709085038091" data-lightbox="">
                               <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-1a.jpeg">
                                 <div class="item-content">
@@ -351,25 +356,16 @@
                               </div>
                             </a></div>
                           <!-- Single item-->
-
-                          <!-- Single item-->
-
-                          <!-- Single item-->
                           <div class="single-item col-6 col-lg-4 brand"
-                            style="position: absolute; left: 0px; top: 425.547px;"><a class="portfolio-item"
-                              href="EM MANUTENÇÃO" data-lightbox="">
-                              <div class="portfolio-wrapper rc-mb-0"><img class="img-fluid" alt="Item"
-                                  src="img/item-2b.jpeg">
+                            style="position: absolute; left: 399.984px; top: 425.547px;"><a class="portfolio-item"
+                              href="img/Em-Breve.jpeg" data-lightbox="">
+                              <div class="portfolio-wrapper rc-mb-0"><img class="img-fluid" alt="Item" src="img/item-2b.jpeg">
                                 <div class="item-content">
-                                  <h6 class="content-title">Monte sua própria dieta</h6><span class="content-more">
+                                  <h6 class="content-title">Em breve</h6><span class="content-more">
                                   </span>
                                 </div>
                               </div>
                             </a></div>
-                          <!-- Single item-->
-
-                          <!-- Single item-->
-
                         </div>
                       </div>
                     </div>
@@ -391,7 +387,6 @@
     </div>
   </div>
 
-
   <!-- contato lightbox-->
   <div class="lightbox-wrapper animated contact-off fadeOut contato-off" id="contato" data-simplebar="init"
     style="position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; z-index: -9999; opacity: 0; animation-duration: 0s; animation-delay: 0.5s; animation-fill-mode: none;">
@@ -400,8 +395,9 @@
         <div class="simplebar-height-auto-observer"></div>
       </div>
       <div class="simplebar-mask">
-        <div class="simplebar-offset" style="right: 0px; bottom: 0px;">
-          <div class="simplebar-content-wrapper" style="height: 100%; overflow: hidden;">
+        <div class="simplebar-offset" style="right: -21.25px; bottom: 0px;">
+          <div class="simplebar-content-wrapper"
+            style="height: 100%; overflow: hidden scroll; padding-right: 20px; padding-bottom: 0px;">
             <div class="simplebar-content" style="padding: 0px;">
               <div class="container">
                 <div class="lightbox-close">
@@ -485,8 +481,8 @@
     <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;">
       <div class="simplebar-scrollbar" style="width: 25px; transform: translate3d(0px, 0px, 0px); display: none;"></div>
     </div>
-    <div class="simplebar-track simplebar-vertical" style="visibility: hidden;">
-      <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: none; height: 574px;">
+    <div class="simplebar-track simplebar-vertical" style="visibility: visible;">
+      <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: block; height: 363px;">
       </div>
     </div>
   </div>
@@ -746,6 +742,46 @@
     }
     // ]]>
   </script>
+  <!-- Code injected by live-server -->
+  <script>
+    // <![CDATA[  <-- For SVG support
+    if ('WebSocket' in window) {
+      (function () {
+        function refreshCSS() {
+          var sheets = [].slice.call(document.getElementsByTagName("link"));
+          var head = document.getElementsByTagName("head")[0];
+          for (var i = 0; i < sheets.length; ++i) {
+            var elem = sheets[i];
+            var parent = elem.parentElement || head;
+            parent.removeChild(elem);
+            var rel = elem.rel;
+            if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+              var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+              elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+            }
+            parent.appendChild(elem);
+          }
+        }
+        var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+        var address = protocol + window.location.host + window.location.pathname + '/ws';
+        var socket = new WebSocket(address);
+        socket.onmessage = function (msg) {
+          if (msg.data == 'reload') window.location.reload();
+          else if (msg.data == 'refreshcss') refreshCSS();
+        };
+        if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+          console.log('Live reload enabled.');
+          sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+        }
+      })();
+    }
+    else {
+      console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+    }
+    // ]]>
+  </script>
+
+
 </body>
 
 </html>
